# CRANEO_INTERACTIVO_ESP_IDF

./: CMakeLists.txt  README.md
components/BLE_service/: BLE_service.c  CMakeLists.txt
components/BLE_service/include/: BLE_service.h
components/indicador_led/: CMakeLists.txt  indicador_led.c
components/indicador_led/include/: indicador_led.h
components/iot_servo/: CMakeLists.txt  iot_servo.c
components/iot_servo/include/: iot_servo.h
components/servo_mandibula/: CMakeLists.txt  servo_mandibula.c
components/servo_mandibula/include/: servo_mandibula.h
main/: idf_component.yml  main.c
